@@ -1,6 +1,0 @@
-#ifndef _ALUTINIT_H
-#define _ALUTINIT_H
-
-extern void _alutSanityCheck (void);
-
-#endif /* not _ALUTINIT_H */
